--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
 	<h3>Instructions</h3>
 	<p>Take a good look at the cards, and try to memorize the pairs. Once the cards are flipped over, click on the pairs you can think of. Good Luck!</p>
 	
-	<section class='score'></section>
+
+	 <section class='game-over'>
+      <h1></h1>
+      <h2 class='final-score'></h2>
+      <h2 class='time'></h2>
+      <button>play again</button>
+    </section>
 	<button id="start" class="waves-effect waves-light btn">Start Game</button>
 	<button id="reset" class="waves-effect waves-light btn">Reset</button>
 	<!-- <button id="level-one" class="waves-effect waves-light btn">Easier</button>
 	<button id="level-two" class="waves-effect waves-light btn">Advanced</button> -->
 	<div id="game-board" class="board clearfix">
-		<section class="grid"></section>
 	</div>
+	<div class='responsive-border-center'></div>
+    <section class='timer'></section>
+    <div class='responsive-border-back'></div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
