--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 <head>
 	<title>CONCENTRATION</title>
@@ -8,18 +8,22 @@
 </head>
 <body>
 	<h1>Concentration</h1>
-	<h2 class="final-score"></h2>
 	<h3>Instructions</h3>
 	<p>Take a good look at the cards, and try to memorize the pairs. Once the cards are flipped over, click on the pairs you can think of. Good Luck!</p>
 	<button id="start" class="waves-effect waves-light btn">Start Game</button>
 	<button id="reset" class="waves-effect waves-light btn">Reset</button>
+	<div>
+	<h5>Score</h5>
+	<h5 id="score">0</h5>
+	<h5>Timer</h5>
+	<h5 id="timer">30</h5>
+	</div>
 	<!-- <button id="level-one" class="waves-effect waves-light btn">Easier</button>
 	<button id="level-two" class="waves-effect waves-light btn">Advanced</button> -->
 	<div id="game-board" class="board clearfix">
 	</div>
 	<div class='responsive-border-center'></div>
-    <section class='timer'></section>
-    <div class='responsive-border-back'></div>
+    
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
